           original number of channels.
* Bugfix: Issue #46 - Ensure the selected bitrate is used. Files could become much larger than
          expected. There's a strange FFmpeg API behaviour behind that, added the solution used
          in ffmpeg.c to fix.
* Bugfix: Issue #48 - Properly handle incorrectly authored DVDs with missing SRI_END_OF_CELL
          marks after cells.
* Libav support has been dropped. There is not activity on https://git.libav.org/?p=libav.git
  since 21.08.2019, and some features that FFmpegfs required were already lagging behind FFmpeg
  API. Supporting Libav already bound a lot of my time that I could better spend on new features
  or fixes for FFmpegfs.

Important changes in 1.10 (2020-01-21)

* Feature: Added checks for mov/mp4/prores/webm video format.
* Bugfix: Moved video deinterlace filtering before rescaling. Deinterlace does not work properly on
          rescaled videos, what a suprise. Especially caused strange results on Bluray sources,
          created blurred frames if downscaled from HD to SD (or lower) before deinterlacing.
* Bugfix: Avoid EINVAL errors in case the cache file ends up at zero size. Minor problem, but ugly.
* Bugfix: Cache structure was not properly initialised, causing invalid values in the database.
* Bugfix: Skip corrupted and discarded video frames to avoid blurps.
* Bugfix: Corrected mistake in online help: clear-cache should be clear_cache instead.
* Bugfix: Issue #43 - fix garbled first 12 frames. Enhanced overall picture quality.
* Workaround: Issue #45 - fix garbled Bluray/DVD playback. Just a workaround, the problem is
              somewhere else.
* Due to copyright uncertanties and because the public domain license used is controversal, all
  demo files in test/srcdir have been replaced with own works and put under the CC0 1.0 Universal
  license.
* Known bug: Libav support for videos seems broken. Not sure if this will be fixed or Libav be
             simply dropped.
